--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   .App-logo {
     height: 40vmin;
     pointer-events: none;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    /* flex-direction: column; */
   }
   
   @media (prefers-reduced-motion: no-preference) {
